--- a/Index.html
+++ b/Index.html
@@ -12,7 +12,7 @@
     <h2 id=> Top 5 Pc Games. </h2>
     <ol>
       <li> <a href='https://newzoo.com/game/minecraft?utm_source=pc_ranking_page'</a> Minecraft</li>
-        <img src="./Games/Minecraft.jpg" alt='The Survival Game' style="width:360px;height:320px;">
+        <img src="./Games/A Minecraft.jpg" alt='The Survival Game' style="width:360px;height:320px;">
 
         <li><a href='https://newzoo.com/game/fortnite?utm_source=pc_ranking_page'</a> Fortnite </li>
           <img src="./Games/fortnite.jpg" alt='Battle Royale' style="width:360px;height:320px;">
